--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "### This was a self-driven project I worked on to recieve extra credit for an undergraduate course in data analysis (CS 3501).\n",
-    "### I was given an open-ended computer vision problem - building a machine learning algorithim which could take in pictures of\n",
+    "### I was given an open-ended computer vision problem - building a machine learning algorithim which could read in pictures of\n",
     "### handwritten numbers, and determine what number the picture represented. To tackle this, I implemented a K-Means Clustering\n",
     "### approach using Python "
    ]
