--- a/GUI/ReadMe
+++ b/GUI/ReadMe
@@ -1,1 +1,1 @@
-This folder contains Java code constructing a GUI which allows users to view and sort photographs. It was created as a HW assignment in UVA's CS 2110 course
+This folder contains Java code constructing a GUI which allows users to view and sort photographs. It was created as an assignment in UVA's CS 2110 course
