--- a/K Means Clustering/Kmeans.ipynb
+++ b/K Means Clustering/Kmeans.ipynb
@@ -241,7 +241,7 @@
     "\n",
     "\n",
     "##I would choose 9 clusters for this dataset since this had the highest accuracy. With an accuracy score of 0.86, this model proved highly effective at classifying\n",
-    "## handwritten numbers. The next step would be "
+    "## handwritten numbers. The next step would be finding additional data to train the model with"
    ]
   }
  ],
