--- a/K Means Clustering/Kmeans.ipynb
+++ b/K Means Clustering/Kmeans.ipynb
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###Test time appears to be increaseing relatively linearly. This linear increase in time suggests that the K-means algorithim is BigO(n). \n",
+    "###Test time appears to be increaseing relatively linearly. This linear increase in time suggests that the K-means algorithim is O(n). \n",
     "##While test time increases monotonically, accuracy does not appear to follow this same pattern. There is a general increase in accuracy \n",
     "#as K increases from K=0 to K = 10, although this correlation does not always appear to be positive. Accuracy begins to plateau from K = 4 to K = 10.\n",
     "##This suggests that adding clusters does not always help improve accuracy. I would imagine that, at a certain point, increasing K leads to overfitting.\n",
